Changes to make Avrora compile without warnings on Java 17